fixed gap in cards

--- a/scss/main.css
+++ b/scss/main.css
@@ -487,7 +487,7 @@ body {
   font-size: 0.9rem;
   margin-bottom: 9%;
   box-shadow: 0 8px 60px 0 rgba(0, 0, 0, 0.15);
-  height: 430px;
+  align-items: stretch;
 }
 @media (min-width: 576px) {
   .country__card {
