--- a/scss/pages/country/_country.scss
+++ b/scss/pages/country/_country.scss
@@ -56,7 +56,7 @@
     font-size: 0.9rem;
     margin-bottom: 9%;
     box-shadow: $shadow;
-    height: 430px;
+    align-items: stretch;
     @include media-bp-up(sm) {
       margin-bottom: 5%;
     }
@@ -71,7 +71,6 @@
 }
 
 .card-body {
-
   .country__btn {
     bottom: -10px;
     right: 10px;
